synthizer-sys/src/synthizer.rs

extern "C" {
    pub fn syz_createBufferGenerator(
        out: *mut syz_Handle,
        context: syz_Handle,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_sourceAddGenerator(source: syz_Handle, generator: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_sourceRemoveGenerator(source: syz_Handle, generator: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createDirectSource(
        out: *mut syz_Handle,
        context: syz_Handle,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createAngularPannedSource(
        out: *mut syz_Handle,
        context: syz_Handle,
        panner_strategy: ::std::os::raw::c_int,
        azimuth: f64,
        elevation: f64,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createScalarPannedSource(
        out: *mut syz_Handle,
        context: syz_Handle,
        panner_strategy: ::std::os::raw::c_int,
        panning_scalar: f64,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createSource3D(
        out: *mut syz_Handle,
        context: syz_Handle,
        panner_strategy: ::std::os::raw::c_int,
        x: f64,
        y: f64,
        z: f64,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createNoiseGenerator(
        out: *mut syz_Handle,
        context: syz_Handle,
        channels: ::std::os::raw::c_uint,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_SineBankWave {
    pub frequency_mul: f64,
    pub phase: f64,
    pub gain: f64,
}
#[test]
fn bindgen_test_layout_syz_SineBankWave() {
    assert_eq!(
        ::std::mem::size_of::<syz_SineBankWave>(),
        24usize,
        concat!("Size of: ", stringify!(syz_SineBankWave))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_SineBankWave>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_SineBankWave))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_SineBankWave>())).frequency_mul as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankWave),
            "::",
            stringify!(frequency_mul)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_SineBankWave>())).phase as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankWave),
            "::",
            stringify!(phase)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_SineBankWave>())).gain as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankWave),
            "::",
            stringify!(gain)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_SineBankConfig {
    pub waves: *const syz_SineBankWave,
    pub wave_count: ::std::os::raw::c_ulonglong,
    pub initial_frequency: f64,
}
#[test]
fn bindgen_test_layout_syz_SineBankConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_SineBankConfig>(),
        24usize,
        concat!("Size of: ", stringify!(syz_SineBankConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_SineBankConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_SineBankConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_SineBankConfig>())).waves as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankConfig),
            "::",
            stringify!(waves)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_SineBankConfig>())).wave_count as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankConfig),
            "::",
            stringify!(wave_count)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_SineBankConfig>())).initial_frequency as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_SineBankConfig),
            "::",
            stringify!(initial_frequency)
        )
    );
}
impl Default for syz_SineBankConfig {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn syz_initSineBankConfig(cfg: *mut syz_SineBankConfig);
}
extern "C" {
    pub fn syz_createFastSineBankGenerator(
        out: *mut syz_Handle,
        context: syz_Handle,
        bank_config: *const syz_SineBankConfig,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createFastSineBankGeneratorSine(
        out: *mut syz_Handle,
        context: syz_Handle,
        initial_frequency: f64,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createFastSineBankGeneratorTriangle(
        out: *mut syz_Handle,
        context: syz_Handle,
        initial_frequency: f64,
        partials: ::std::os::raw::c_uint,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createFastSineBankGeneratorSquare(
        out: *mut syz_Handle,
        context: syz_Handle,
        initial_frequency: f64,
        partials: ::std::os::raw::c_uint,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createFastSineBankGeneratorSaw(
        out: *mut syz_Handle,
        context: syz_Handle,
        initial_frequency: f64,
        partials: ::std::os::raw::c_uint,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_RouteConfig {
    pub gain: f64,
    pub fade_time: f64,
    pub filter: syz_BiquadConfig,
}
#[test]
fn bindgen_test_layout_syz_RouteConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_RouteConfig>(),
        72usize,
        concat!("Size of: ", stringify!(syz_RouteConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_RouteConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_RouteConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).gain as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(gain)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).fade_time as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(fade_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).filter as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(filter)
        )
    );
}
extern "C" {
    pub fn syz_initRouteConfig(cfg: *mut syz_RouteConfig) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_routingConfigRoute(
        context: syz_Handle,
        output: syz_Handle,
        input: syz_Handle,
        config: *const syz_RouteConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_routingRemoveRoute(
        context: syz_Handle,
        output: syz_Handle,
        input: syz_Handle,
        fade_out: f64,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_effectReset(effect: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createGlobalEcho(
        out: *mut syz_Handle,
        context: syz_Handle,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_EchoTapConfig {
    pub delay: f64,
    pub gain_l: f64,
    pub gain_r: f64,
}
#[test]
fn bindgen_test_layout_syz_EchoTapConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_EchoTapConfig>(),
        24usize,
        concat!("Size of: ", stringify!(syz_EchoTapConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_EchoTapConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_EchoTapConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).delay as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(delay)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).gain_l as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(gain_l)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).gain_r as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(gain_r)
        )
    );
}
extern "C" {
    pub fn syz_globalEchoSetTaps(
        handle: syz_Handle,
        n_taps: ::std::os::raw::c_uint,
        taps: *const syz_EchoTapConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createGlobalFdnReverb(
        out: *mut syz_Handle,
        context: syz_Handle,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
